[project]
name = "qwen3-subtitles-pipeline"
version = "0.2.0"
description = "Subtitle pipeline with Qwen3 alignment and FunASR/SenseVoice transcription support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "qwen-asr",
  "silero-vad",
  "soundfile",
]

[project.optional-dependencies]
funasr = [
  "funasr",
  "modelscope",
]
all = [
  "funasr",
  "modelscope",
]

[tool.uv]
package = false
